part1/Exercise_1.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stringgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stringgenerator
  template:
    metadata:
      labels:
        app: stringgenerator
    spec:
      containers:
        - name: stringgenerator
          image: vilkorppi/generator:v3
