part1/Exercise_1.07/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserverportservice
spec:
  type: ClusterIP
  selector:
    app: webserverport
  ports:
    - port: 456
      protocol: TCP
      targetPort: 3015
